[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "androidrepo"
version = "0.1.0"
description = "Telegram bot to automate posts in Android Repository channel"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Hitalo M." }]
requires-python = ">=3.13"
dependencies = [
    "aiogram[fast]>=3.21.0",
    "pydantic-settings>=2.10.1",
    "aiohttp[speedups]>=3.9.0",
    "openai>=1.93.0",
    "pillow>=11.2.1",
    "aiosqlite>=0.21.0",
    "sqlalchemy[asyncio]>=2.0.41",
]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "ruff>=0.12.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]
