[project]
name = "androidrepo"
version = "0.1.0"
description = "Telegram bot to automate posts in Android Repository channel"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Hitalo M." }]
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.22.0",
    "anyio>=4.11.0",
    "pillow>=12.0.0",
    "pydantic-settings>=2.5",
    "pydantic>=2.5",
    "aiohttp[speedups]>=3.12",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "structlog>=25.5.0",
    "uvloop>=0.22.1",
    "pydantic-ai-slim[openai]>=1.22.0",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bot"
module-root = "src"

[dependency-groups]
dev = ["pre-commit>=4.5.0", "ty>=0.0.1a7", "ruff>=0.14.6"]
